--- a/samplewebproject/index.html
+++ b/samplewebproject/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+
+<!-- html test page -->
+
 <html>
   <head>
   </head>
@@ -6,7 +9,7 @@
   <body>
     <form>
       <label>Enter email</label>
-      <input ?>
+      <input />
       <button>Submit</button>
     </form>
     <h1></h1>
